--- a/about.html
+++ b/about.html
@@ -561,11 +561,11 @@
                     <div class="col-lg-5 col-md-6 footer-list-29 footer-1">
                         <h2 class="mb-4">
                             <a class="footer-logo" href="index.html">
-                                Foodi<span>e</span> Blog<i class="fas fa-utensils"></i>
+                                L<span>e</span> Nusantara<i class="fas fa-utensils"></i>
                             </a>
                         </h2>
-                        <p>Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at
-                            tempufddfel. Lorem ipsum dolor sit amet Semper at elit team advisors.</p>
+                        <p>LeNusantara is a food-blog website that repsresents authentic Indonesian 
+                            food that we highly recommend trying!</p>
                         <div class="main-social-footer-29 mt-md-4 mt-3">
                             <a href="#facebook" class="facebook"><i class="fab fa-facebook-f"></i></a>
                             <a href="#twitter" class="twitter"><i class="fab fa-twitter"></i></a>
