--- a/contact.html
+++ b/contact.html
@@ -134,17 +134,17 @@
                 <div class="col-lg-3 col-sm-6 contact-info">
                     <i class="fas fa-map-marked-alt"></i>
                     <h4>Location</h4>
-                    <p>London, 235 Terry, 10001</p>
+                    <p>Jl. Metro Alam X No.54, Pondok Indah, Kebayoran Lama, South Jakarta 12310</p>
                 </div>
                 <div class="col-lg-3 col-sm-6 contact-info mt-md-0 mt-4">
                     <i class="fas fa-headset"></i>
                     <h4>Phone</h4>
-                    <p><a href="tel:+44 987 654 321">+44 123 984 439</a></p>
+                    <p><a href="tel:+62 21 234 4567">+62(21) 234 4567</a></p>
                 </div>
                 <div class="col-lg-3 col-sm-6 contact-info mt-lg-0 mt-4">
                     <i class="fas fa-envelope-open-text"></i>
                     <h4>Email</h4>
-                    <p><a href="mailto:mail@example.com" class="email">mail@example.com</a></p>
+                    <p><a href="mailto:mail@example.com" class="email">lenusantara@gmail.com</a></p>
                 </div>
                 <div class="col-lg-3 col-sm-6 contact-info mt-lg-0 mt-4">
                     <i class="fas fa-user-clock"></i>
