--- a/contact.html
+++ b/contact.html
@@ -270,11 +270,11 @@
                     <div class="col-lg-5 col-md-6 footer-list-29 footer-1">
                         <h2 class="mb-4">
                             <a class="footer-logo" href="index.html">
-                                Foodi<span>e</span> Blog<i class="fas fa-utensils"></i>
+                                L<span>e</span> Nusantara<i class="fas fa-utensils"></i>
                             </a>
                         </h2>
-                        <p>Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at
-                            tempufddfel. Lorem ipsum dolor sit amet Semper at elit team advisors.</p>
+                        <p>LeNusantara is a food-blog website that repsresents authentic Indonesian 
+                            food that we highly recommend trying!</p>
                         <div class="main-social-footer-29 mt-md-4 mt-3">
                             <a href="#facebook" class="facebook"><i class="fab fa-facebook-f"></i></a>
                             <a href="#twitter" class="twitter"><i class="fab fa-twitter"></i></a>
@@ -285,11 +285,11 @@
 
                     <div class="col-xl-5 col-lg-4 col-md-6 footer-list-29 footer-1 px-xl-5 mt-md-0 mt-5">
                         <h6 class="footer-title-29">Contact Info </h6>
-                        <p class="mb-2">Address : Foodie, 10001, 5th Avenue, #06 lane street, NY - 62617.
+                        <p class="mb-2">Address : Jl. Metro Alam X No.54, Pondok Indah, Kebayoran Lama, South Jakarta 12310
                         </p>
-                        <p class="mb-2">Phone Number : <a href="tel:+1(21) 234 4567">+1(21) 234 4567</a></p>
-                        <p class="mb-2">Email : <a href="mailto:info@example.com">info@example.com</a></p>
-                        <p>Support : <a href="mailto:info@support.com">info@support.com</a></p>
+                        <p class="mb-2">Phone Number : <a href="tel:+62(21) 234 4567">+62(21) 234 4567</a></p>
+                        <p class="mb-2">Email : <a href="mailto:info@example.com">lenusantara@gmail.com</a></p>
+                        <p>Support : <a href="mailto:info@support.com">lenusantaracoms.com</a></p>
                     </div>
 
                     <div class="col-xl-2 col-lg-3 col-md-6 col-sm-5 col-6 footer-list-29 footer-2 mt-lg-0 mt-5">
@@ -308,7 +308,7 @@
         <!-- copyright -->
         <section class="w3l-copyright text-center">
             <div class="container">
-                <p class="copy-footer-29">© 2021 Foodie Blog. All rights reserved.</p>
+                <p class="copy-footer-29">© 2022 LeNusantara. All rights reserved.</p>
             </div>
         </section>
         <!-- //copyright -->
