--- a/about.html
+++ b/about.html
@@ -351,12 +351,12 @@
                                     <div class="teamy_back-inner">
                                         <a href="#facebook" class="social"> <i class="fab fa-facebook-f"></i> </a>
                                         <a href="#twitter" class="social"> <i class="fab fa-twitter"></i> </a>
-                                        <a href="#instagram" class="social"> <i class="fab fa-instagram"></i> </a>
+                                        <a href="https://instagram.com/martinhrdt" class="social"> <i class="fab fa-instagram"></i> </a>
                                     </div>
                                 </div>
                             </div>
                             <div class="teamy_content">
-                                <a href="#url" class="teamy_name">Rose Alha</a>
+                                <a href="#url" class="teamy_name">Tito Dito Martin</a>
                                 <span class="teamy_post">Chef</span>
                             </div>
                         </div>
