--- a/about.html
+++ b/about.html
@@ -244,9 +244,9 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 content-sec-1">
                     <h3 class="title-style mb-3">Story behind this food blog</h3>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit
-                        doloremque laudantium, totam rem aperiam. Sed ut perspiciatis unde omnis iste natus error sit
-                        accus antium dolor emque lauda ntium.
+                    <p>LeNusantara was created in early 2022. The people that created LeNusantara had the idea to create
+                        a food blog with a purpose to introduce known and unknown Indonesiasn cuisine. With the help
+                        from chef's, this website is born with reliable information.
                     </p>
                     <a class="btn btn-style mt-4" href="blog-single.html">Let's Know More</a>
                 </div>
@@ -260,9 +260,9 @@
                 </div>
                 <div class="col-lg-6 content-sec-1 order-lg-2 order-1">
                     <h3 class="title-style mb-3">Cooking is about passion</h3>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit
-                        doloremque laudantium, totam rem aperiam. Sed ut perspiciatis unde omnis iste natus error sit
-                        accus antium dolor emque lauda ntium.
+                    <p>Having a passsion to cook is one of the most fun and useful things that you can do.
+                        Cooking without passion is like cooking without spices. Bring the love in your heart
+                        in cooking, the taste will be lovely!
                     </p>
                     <a class="btn btn-style mt-4" href="blog-single.html">Let's Know More</a>
                 </div>
@@ -373,7 +373,7 @@
             <div class="container py-md-5 py-4">
                 <div class="text-center mb-lg-5 mb-4">
                     <h3 class="title-style text-white">
-                        What our Customers say's
+                        What our Visitors say's
                     </h3>
                 </div>
                 <div class="testimonial-row">
@@ -392,12 +392,10 @@
                                     </div>
                                     <div class="col-md-9 pl-lg-5 mt-md-0 mt-4 text-left testi-cont">
                                         <blockquote>
-                                            <q>Lorem ipsum dolor sit amet int consectetur adipisicing elit. Velita
-                                                beatae
-                                                laudantium Quas minima sunt natus tempore, maiores aliquid modi felis
-                                                sequi optio lacinia id ipsum non velit, culpa.
-                                                voluptate rem ullam dolore nisi est quasi, doloribus tempora.
-                                                est elit. Non quae, fugiat ad libero justo sed amet.</q>
+                                            <q>This website is definitely useful for my knowledge of food and also 
+                                                gives me more passion about cookiing, so that I can cook Indonesian
+                                                cuisine without having trouble!
+                                            </q>
                                         </blockquote>
                                     </div>
                                 </div>
@@ -417,12 +415,9 @@
                                     </div>
                                     <div class="col-md-9 pl-lg-5 mt-md-0 mt-4 text-left testi-cont">
                                         <blockquote>
-                                            <q>Lorem ipsum dolor sit amet int consectetur adipisicing elit. Velita
-                                                beatae
-                                                laudantium Quas minima sunt natus tempore, maiores aliquid modi felis
-                                                sequi optio lacinia id ipsum non velit, culpa.
-                                                voluptate rem ullam dolore nisi est quasi, doloribus tempora.
-                                                est elit. Non quae, fugiat ad libero justo sed amet.</q>
+                                            <q>At first, I was having a trouble trying to study the origin and the
+                                                recipes for Indonesian food. Since I found LeNusantara, my passsion
+                                                to cook Indonesian food is trouble free!</q>
                                         </blockquote>
                                     </div>
                                 </div>
@@ -442,12 +437,10 @@
                                     </div>
                                     <div class="col-md-9 pl-lg-5 mt-md-0 mt-4 text-left testi-cont">
                                         <blockquote>
-                                            <q>Lorem ipsum dolor sit amet int consectetur adipisicing elit. Velita
-                                                beatae
-                                                laudantium Quas minima sunt natus tempore, maiores aliquid modi felis
-                                                sequi optio lacinia id ipsum non velit, culpa.
-                                                voluptate rem ullam dolore nisi est quasi, doloribus tempora.
-                                                est elit. Non quae, fugiat ad libero justo sed amet.</q>
+                                            <q>I'm a food reviewer that is currently studying about special cuisines
+                                                that comes from Indonesia. Never thought that this website can help
+                                                me find information of the origin of Indonesian foods. Qudos, LeNusantara!
+                                            </q>
                                         </blockquote>
                                     </div>
                                 </div>
@@ -466,9 +459,7 @@
             <div class="bottom-info">
                 <div class="header-section text-center">
                     <h3 class="title-style">Discover the most delicious recipes.</h3>
-                    <p class="mt-3 pr-lg-5">Lorem ipsum dolor sit amet elit. Velit beatae
-                        rem ullam dolore nisi esse quasi, sit amet. Lorem ipsum dolor sit
-                        amet elit.</p>
+                    <p class="mt-3 pr-lg-5">Subscribe for more delicious recipes!</p>
                 </div>
                 <form action="#" class="subscribe mt-5" method="post">
                     <div class="input-group-text"><i class="fas fa-paper-plane"></i></div>
