--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,6 @@
                         L<span>e</span> Nusantara<i class="fas fa-utensils"></i>
                     </a>
                 </h1>
-                <!-- if logo is image enable this   
-    <a class="navbar-brand" href="#index.html">
-        <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-    </a> -->
                 <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse"
                     data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -54,26 +50,8 @@
                                 Blog <span class="fas fa-angle-down ml-lg-1"></span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-2" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="blog.html">Grid classic with right sidebar</a>
-                                <a class="dropdown-item" href="blog2.html">Grid classic with left sidebar</a>
-                                <a class="dropdown-item" href="blog3.html">Standard list with right sidebar</a>
-                                <a class="dropdown-item" href="blog4.html">Standard list with left sidebar</a>
-                                <a class="dropdown-item" href="blog5.html">Grid classic</a>
-                                <a class="dropdown-item" href="blog-single.html">Standard post with right sidebar</a>
-                                <a class="dropdown-item" href="blog-single2.html">Standard post with left sidebar</a>
-                                <a class="dropdown-item" href="blog-single3.html">Standard post</a>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link dropdown-toggle d-lg-flex align-items-center" href="#"
-                                id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-                                aria-expanded="false">
-                                Pages <span class="fas fa-angle-down ml-lg-1"></span>
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="menu.html">Menu</a>
-                                <a class="dropdown-item" href="error.html">404 Page</a>
-                                <a class="dropdown-item" href="shortcodes.html">Shortcodes</a>
+                                <a class="dropdown-item" href="blog4.html">List</a>
+                                <a class="dropdown-item" href="blog-single.html">Tips</a>
                             </div>
                         </li>
                         <li class="nav-item active">
