--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
                                 </div>
                                 <div class="right-ab-block">
                                     <h3>Dee Zynah</h3>
-                                    <p>Duis aute irure dolor in reprehenderit in esse cillum dolore.</p>
+                                    <p>One of our editors at LeNusantara</p>
                                 </div>
                             </div>
                         </div>
